@@ -1,6 +1,9 @@
+import codecs
 import sys
 import operator
 import functools
+import warnings
+
 try:
     import builtins
 except ImportError:
@@ -200,3 +203,46 @@ def to_unicode(x, charset=sys.getdefaultencoding(), errors='strict',
     if charset is None and allow_none_charset:
         return x
     return x.decode(charset, errors)
+
+
+# We do not trust traditional unixes.
+has_likely_buggy_unicode_filesystem = \
+    sys.platform.startswith('linux') or 'bsd' in sys.platform
+
+
+def is_ascii_encoding(encoding):
+    """
+    Given an encoding this figures out if the encoding is actually ASCII (which
+    is something we don't actually want in most cases). This is necessary
+    because ASCII comes under many names such as ANSI_X3.4-1968.
+    """
+    if encoding is None:
+        return False
+    try:
+        return codecs.lookup(encoding).name == 'ascii'
+    except LookupError:
+        return False
+
+
+_warned_about_filesystem_encoding = False
+def get_filesystem_encoding():
+    """
+    Returns the filesystem encoding that should be used. Note that this is
+    different from the Python understanding of the filesystem encoding which
+    might be deeply flawed. Do not use this value against Python's unicode APIs
+    because it might be different.
+
+    The concept of a filesystem encoding in generally is not something you
+    should rely on. As such if you ever need to use this function except for
+    writing wrapper code reconsider.
+    """
+    global _warned_about_filesystem_encoding
+    rv = sys.getfilesystemencoding()
+    if has_likely_buggy_unicode_filesystem and is_ascii_encoding(rv):
+        if not _warned_about_filesystem_encoding:
+            warnings.warn(
+                'Detected a misconfigured UNIX filesystem: Will use UTF-8 as '
+                'filesystem encoding instead of {}'.format(rv))
+            _warned_about_filesystem_encoding = True
+        return 'utf-8'
+    return rv
